bootcamp/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bc-15
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: a7dace958d0a846689bceaf129c6f818-0463c2930fda0131.elb.us-east-2.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myrelease-frontend
                port:
                  number: 3000
